--- a/objenv/pyvenv.cfg
+++ b/objenv/pyvenv.cfg
@@ -1,5 +1,3 @@
-home = C:\Users\ngjie\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0
+home = /Users/seanow/.pyenv/versions/3.10.13/bin
 include-system-site-packages = false
-version = 3.13.3
-executable = C:\Users\ngjie\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\python.exe
-command = C:\Users\ngjie\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\python.exe -m venv C:\Users\ngjie\projects\Code-Chords\objenv
+version = 3.10.13
