--- a/requirements.txt
+++ b/requirements.txt
@@ -68,7 +68,7 @@ mpmath==1.3.0
 multidict==6.4.3
 mypy_extensions==1.1.0
 networkx==3.4.2
-numpy==1.26.4
+numpy>=1.23,<2.3
 nvidia-ml-py==12.575.51
 onnxruntime==1.21.1
 openai==1.77.0
