--- a/objenv/pyvenv.cfg
+++ b/objenv/pyvenv.cfg
@@ -1,3 +1,3 @@
-home = /Users/seanow/.pyenv/versions/3.10.13/bin
+home = C:\Users\Admin\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0
 include-system-site-packages = false
-version = 3.10.13
+version = 3.10.11
