--- a/requirements.txt
+++ b/requirements.txt
@@ -140,3 +140,16 @@ wait_for2==0.3.2
 Werkzeug==3.1.3
 yarl==1.20.0
 zxing-cpp==2.2.0
+
+flask
+flask-cors
+numpy
+opencv-python
+inference[transformers]
+inference[sam]
+inference[clip]
+inference[gaze]
+inference[grounding-dino]
+inference[yolo-world]
+pillow
+requests
