--- a/requirements.txt
+++ b/requirements.txt
@@ -51,10 +51,89 @@ humanfriendly==10.0
 idna==3.7
 ifaddr==0.2.0
 imageio==2.37.0
-inference==0.49.1
+inference==0.50.3
 inference-sdk==0.48.3
 iniconfig==2.1.0
 jax==0.6.0
 jaxlib==0.6.0
+jiter==0.10.0
+jmespath==1.0.1
+kiwisolver==1.4.8
+lazy_loader==0.4
+marshmallow==3.26.1
+matplotlib==3.10.3
+ml_dtypes==0.5.1
+mpmath==1.3.0
+multidict==6.4.4
+mypy_extensions==1.1.0
+networkx==3.4.2
+numpy==2.2.6
+nvidia-ml-py==12.575.51
+onnxruntime==1.21.1
+openai==1.82.1
+opencv-contrib-python==4.10.0.84
+opencv-python==4.10.0.84
+opt_einsum==3.4.0
+packaging==24.2
+paho-mqtt==1.6.1
+pandas==2.2.3
+pillow==11.2.1
+pluggy==1.6.0
+prometheus-fastapi-instrumentator==6.0.0
+prometheus_client==0.22.0
+propcache==0.3.1
+protobuf==6.31.1
+py-cpuinfo==9.0.0
+pybase64==1.0.2
+pycparser==2.22
+pydantic==2.11.5
+pydantic-settings==2.7.1
+pydantic_core==2.33.2
+pydot==2.0.0
+pyee==13.0.0
+Pygments==2.19.1
 PyJWT==2.10.1
+pylibsrtp==0.12.0
+pylogix==1.0.5
+pymodbus==3.8.3
+pyOpenSSL==25.1.0
+pyparsing==3.2.3
+pytest==8.3.5
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2025.2
 PyYAML==6.0.2
+redis==5.0.8
+requests==2.32.3
+requests-file==2.1.0
+requests-toolbelt==1.0.0
+rich==13.0.1
+s3transfer==0.10.4
+scikit-image==0.25.2
+scipy==1.15.3
+shapely==2.0.7
+shellingham==1.5.4
+six==1.17.0
+slack_sdk==3.33.5
+sniffio==1.3.1
+sortedcontainers==2.4.0
+starlette==0.37.2
+structlog==24.4.0
+supervision==0.25.1
+sympy==1.14.0
+tifffile==2025.5.10
+tldextract==5.1.3
+tokenizers==0.21.1
+tomli==2.2.1
+tqdm==4.67.1
+twilio==9.3.8
+typer==0.12.5
+typing-inspect==0.9.0
+typing-inspection==0.4.1
+typing_extensions==4.12.2
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.4.0
+wait-for2==0.3.2
+yarl==1.20.0
+zxing-cpp==2.2.0
