--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-absl-py==2.2.2
+absl-py==2.3.0
 aiofiles==24.1.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.10.11
@@ -16,6 +16,7 @@ asyncua==1.1.6
 attrs==25.3.0
 av==12.3.0
 backoff==2.2.1
+blinker==1.9.0
 boto3==1.35.60
 botocore==1.35.99
 cachetools==5.5.2
@@ -24,9 +25,8 @@ cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.1.8
 coloredlogs==15.0.1
-commonmark==0.9.1
 contourpy==1.3.2
-cryptography==44.0.3
+cryptography==45.0.3
 cycler==0.12.1
 Cython==3.0.12
 dataclasses-json==0.6.7
@@ -34,55 +34,65 @@ defusedxml==0.7.1
 distro==1.9.0
 dnspython==2.7.0
 docker==7.1.0
-exceptiongroup==1.2.2
+exceptiongroup==1.3.0
 fastapi==0.110.3
 filelock==3.17.0
 filetype==1.2.0
+Flask==3.1.1
+flask-cors==6.0.0
 flatbuffers==25.2.10
-fonttools==4.57.0
+fonttools==4.58.1
 frozenlist==1.6.0
-fsspec==2025.3.2
+fsspec==2025.5.1
 google-crc32c==1.7.1
 h11==0.16.0
+hf-xet==1.1.2
 httpcore==1.0.9
 httpx==0.28.1
-huggingface-hub==0.30.2
+huggingface-hub==0.32.3
 humanfriendly==10.0
 idna==3.7
 ifaddr==0.2.0
 imageio==2.37.0
 inference==0.50.3
-inference-sdk==0.48.3
 iniconfig==2.1.0
-jax==0.6.0
-jaxlib==0.6.0
+itsdangerous==2.2.0
+jax==0.6.1
+jaxlib==0.6.1
+Jinja2==3.1.6
 jiter==0.10.0
 jmespath==1.0.1
 kiwisolver==1.4.8
 lazy_loader==0.4
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
 marshmallow==3.26.1
 matplotlib==3.10.3
+mdurl==0.1.2
+mediapipe==0.10.21
 ml_dtypes==0.5.1
 mpmath==1.3.0
 multidict==6.4.4
 mypy_extensions==1.1.0
 networkx==3.4.2
-numpy==2.2.6
+numpy==1.26.4
 nvidia-ml-py==12.575.51
 onnxruntime==1.21.1
 openai==1.82.1
 opencv-contrib-python==4.10.0.84
 opencv-python==4.10.0.84
+opencv-python-headless==4.10.0.84
 opt_einsum==3.4.0
 packaging==24.2
 paho-mqtt==1.6.1
 pandas==2.2.3
 pillow==11.2.1
+pillow_heif==0.22.0
 pluggy==1.6.0
 prometheus-fastapi-instrumentator==6.0.0
 prometheus_client==0.22.0
 propcache==0.3.1
-protobuf==6.31.1
+protobuf==4.25.8
 py-cpuinfo==9.0.0
 pybase64==1.0.2
 pycparser==2.22
@@ -107,16 +117,19 @@ redis==5.0.8
 requests==2.32.3
 requests-file==2.1.0
 requests-toolbelt==1.0.0
-rich==13.0.1
+rich==13.9.4
+roboflow==1.1.65
 s3transfer==0.10.4
 scikit-image==0.25.2
 scipy==1.15.3
+sentencepiece==0.2.0
 shapely==2.0.7
 shellingham==1.5.4
 six==1.17.0
 slack_sdk==3.33.5
 sniffio==1.3.1
 sortedcontainers==2.4.0
+sounddevice==0.5.2
 starlette==0.37.2
 structlog==24.4.0
 supervision==0.25.1
@@ -135,5 +148,6 @@ tzdata==2025.2
 tzlocal==5.3.1
 urllib3==2.4.0
 wait-for2==0.3.2
+Werkzeug==3.1.3
 yarl==1.20.0
 zxing-cpp==2.2.0
