added search-history feature using firebase

--- a/guitar-story/package.json
+++ b/guitar-story/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mediapipe/drawing_utils": "^0.3.1675466124",
+    "@mediapipe/hands": "^0.4.1675469240",
     "axios": "^1.10.0",
     "firebase": "^11.9.1",
     "inferencejs": "^1.0.21",
